# sdk

./: .gitignore  Cargo.toml  LICENSE  Package.swift  README.md  composer.json  memory.md
.github/publishing/: openupm-co.logbrew.unity.yml  trusted-publishers.md
.github/workflows/: ci.yml  publish-nuget.yml  publish-packages.yml  publish-pypi-django.yml  publish-release.yml  reconcile-public-packages.yml  release-readiness.yml
assets/brand/: README.md
docs/: github-actions.md  sdk-readiness-checklist.md  sdk-setup-picker-guidance.md  severity-contract.md
fixtures/: invalid-batch.json  malformed-batch.json  valid-batch.json
python/logbrew_django/: README.md  pyproject.toml
python/logbrew_django/examples/: readme_example.py  real_user_smoke.py
python/logbrew_django/src/logbrew_django/: __init__.py
python/logbrew_django/src/logbrew_django/examples/: __init__.py  __main__.py  dependency_spans.py  outbound_http.py  readme_example.py  real_user_smoke.py
python/logbrew_django/tests/: test_django_integration.py
python/logbrew_py/: README.md  pyproject.toml
python/logbrew_py/examples/: celery_persistent_worker.py  first_useful_telemetry.py  real_user_smoke.py
python/logbrew_py/src/logbrew_sdk/: __init__.py  _automatic_delivery.py  _cache_client.py  _celery_client.py  _celery_instrumentation.py  _celery_worker_lifecycle.py  _db_client.py  _dbapi_client.py  _delivery_lifecycle.py  _django_cache_client.py  _errors.py  _event_queue.py  _flask_cache_client.py  _http_client.py  _http_instrumentation.py  _instrumentation.py  _opentelemetry_processor.py  _persistence_crypto.py  _persistent_event_queue.py  _pymemcache_client.py  _queue_client.py  _redis_client.py  _rq_client.py  _span_events.py  _sqlalchemy_client.py  _support_ticket.py  _timeline.py  _trace_context.py
python/logbrew_py/src/logbrew_sdk/examples/: __init__.py  __main__.py  agent_timeline.py  first_useful_telemetry.py
python/logbrew_py/tests/: test_automatic_delivery.py  test_cache_client.py  test_celery_client.py  test_celery_instrumentation.py  test_celery_worker_lifecycle.py  test_database_client.py  test_delivery.py  test_delivery_lifecycle.py  test_django_cache_client.py  test_encrypted_persistent_delivery.py  test_examples.py  test_flask_cache_client.py  test_http_client.py  test_opentelemetry_processor.py  test_persistent_delivery.py  test_pymemcache_client.py  test_queue_client.py  test_redis_client.py  test_rq_client.py  test_sdk.py  test_span_links.py  test_sqlalchemy_client.py  test_support_ticket.py
rust/logbrew/: Cargo.toml  README.md
rust/logbrew/examples/: Makefile  actix_request_middleware.rs  axum_request_middleware.rs  first_useful_telemetry.rs  http_server_request.rs  opentelemetry_exporter.rs  readme_example.rs  real_user_smoke.rs  rocket_request_fairing.rs  tracing_bridge.rs  tracing_opentelemetry_bridge.rs
rust/logbrew/src/: delivery.rs  http_client.rs  http_fields.rs  http_server.rs  lib.rs  metadata_safety.rs  metric.rs  opentelemetry_exporter.rs  operation_tracing.rs  product_timeline.rs  tower_layer.rs  traceparent.rs  tracing_layer.rs
rust/logbrew/src/delivery/: automatic.rs  queue.rs  tests.rs
rust/logbrew/src/delivery/queue/: tests.rs
rust/logbrew/tests/: automatic_delivery.rs  delivery_reliability.rs  http_client.rs  opentelemetry_exporter.rs  operation_tracing.rs  run.sh  sdk_flow.rs  tower_layer.rs  tracing_layer.rs
scripts/: build_maven_central_bundle.sh  check_backend_contract_reports.py  check_c_package.sh  check_c_trace_correlation_payload.py  check_ci_no_duplicate_static_checks.py  check_confidentiality_scan.py  check_cpp_package.sh  check_cpp_trace_correlation_payload.py  check_django_package.sh  check_dotnet_activity_source_listener_payload.py  check_dotnet_activity_trace_payload.py  check_dotnet_aspnetcore_request_payload.py  check_dotnet_db_command_payload.py  check_dotnet_dependency_spans_payload.py  check_dotnet_first_useful_payload.py  check_dotnet_http_client_payload.py  check_dotnet_http_trace_payload.py  check_dotnet_opentelemetry_payload.py  check_dotnet_package.sh  check_dotnet_release_artifacts.py  check_dotnet_stackexchange_redis_nupkg.py  check_dotnet_stackexchange_redis_payload.py  check_fastapi_package.sh  check_fastapi_package_json.py  check_flask_package.sh  check_generated_artifacts.py  check_github_release_safety.py  check_go_first_useful_payload.py  check_go_http_trace_payload.py  check_go_static.sh  check_go_tests.sh  check_java_first_useful_payload.py  check_java_http_trace_payload.py  check_java_package.sh  check_java_static.sh  check_js_lint.sh  check_js_package.sh  check_js_sources.py  check_kotlin_package.sh  check_kotlin_style.sh  (+201 more)
spec/: event-batch.schema.json
tests/: native_breakpad_fixture.py  native_elf_fixture.py  native_macho_fixture.py  native_pe_fixture.py  native_unity_fixture.py  test_affected_family_release_prep.py  test_backend_contract_reports.py  test_check_public_sdks.py  test_ci_changed_areas.py  test_ci_duplicate_static_checks.py  test_ci_unit_test_targets.py  test_confidentiality_scan.py  test_cratesio_public_smoke.py  test_default_ingest_endpoints.py  test_dotnet_confidentiality_scan.py  test_dotnet_durable_delivery_workflow_gates.py  test_dotnet_durable_linux_preflight.py  test_dotnet_high_load_workflow_gates.py  test_dotnet_httpclient_factory_smoke.py  test_dotnet_httpclient_package_compatibility_smoke.py  test_dotnet_installed_artifact_activity_source.py  test_dotnet_public_nuget_smoke.py  test_dotnet_release_artifacts.py  test_fastapi_package_json_check.py  test_generated_artifacts.py  test_github_release_safety.py  test_github_release_safety_gates.py  test_go_confidentiality_scan.py  test_go_http_client_smoke.py  test_go_persistence_smoke.py  test_go_public_module_smoke.py  test_go_workflow_cache_path.py  test_java_automatic_delivery_smoke.py  test_java_high_load_smoke.py  test_java_opentelemetry_smoke.py  test_java_persistent_delivery_smoke.py  test_java_server_retry_smoke.py  test_js_high_load_smoke.py  test_js_installed_artifact_workflow_gates.py  test_js_release_artifact_debug_ids.py  (+45 more)
(+904 files in other folders)
