[package]
name = "logbrew"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Public LogBrew Rust SDK for building, validating, and flushing event batches."
repository = "https://github.com/LogBrewCo/sdk"
readme = "README.md"
keywords = ["logbrew", "observability", "logs", "traces", "events"]
categories = ["api-bindings", "development-tools"]

[features]
default = []
http = ["dep:ureq"]
tower = ["dep:http_types", "dep:tower"]

[dependencies]
http_types = { package = "http", version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", optional = true }
ureq = { version = "3.3", optional = true }

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }

[[example]]
name = "axum_request_middleware"
required-features = ["tower"]
