[package]
name = "logbrew"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Public LogBrew Rust SDK for building, validating, and flushing event batches."
repository = "https://github.com/LogBrewCo/sdk"
readme = "README.md"
keywords = ["logbrew", "observability", "logs", "traces", "events"]
categories = ["api-bindings", "development-tools"]

[features]
default = []
http = ["dep:ureq"]
hyper = ["dep:http_types"]
reqwest = ["dep:reqwest"]
tower = ["dep:http_types", "dep:tower"]
tracing = ["dep:tracing-core", "dep:tracing-subscriber"]
tracing-opentelemetry = [
    "tracing",
    "dep:opentelemetry",
    "dep:tracing",
    "dep:tracing-opentelemetry",
]

[dependencies]
http_types = { package = "http", version = "1", optional = true }
opentelemetry = { version = "0.32", default-features = false, features = ["trace"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, optional = true }
tower = { version = "0.5", optional = true }
tracing = { version = "0.1", default-features = false, features = ["std"], optional = true }
tracing-core = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.33", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"], optional = true }
ureq = { version = "3.3", optional = true }

[dev-dependencies]
actix-web = "4"
axum = "0.8"
rocket = "0.5"
time = "=0.3.51"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }

[[example]]
name = "axum_request_middleware"
required-features = ["tower"]

[[example]]
name = "tracing_bridge"
required-features = ["tracing"]

[[example]]
name = "tracing_opentelemetry_bridge"
required-features = ["tracing-opentelemetry"]
